--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<div> 親
+<!DOCTYPE html>
+ <html lang="ja">
+ <head>
+  <meta charset="UTF-8">
+  <title>HP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ <link rel="stylesheet" href="style.css" type="text/css">
+ </head>
+
+ <body>
+
+ <div> 親
 
 <div>兄1</div>
 ここも兄
@@ -12,3 +24,7 @@
 ここも弟
 
 </div>
+
+  </body>
+
+ </html>
