--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
  <body>
 
- <div> 親
+ <div class="親"> 親
 
-<div>兄1</div>
+<div class="兄1">兄1</div>
 ここも兄
-<div>兄2</div>
-<div> 自分
-<div>子1</div>
-<div>子2</div>
+<div class="兄2">兄2</div>
+ <div class="自分">  自分
+ <div class="子1">子1</div>
+ <div class="子2">子2</div>
 </div>
-<div>弟1</div>
-<div>弟2</div>
+ <div class="弟1">弟1</div>
+ <div class="弟2">弟2</div>
 ここも弟
 
 </div>
